//// --- IELTS DOMAIN ---

// ====== SHARED ======

Table users {
  id String [pk]
  email String [unique, not null]
  password String
  googleId String [unique]
  avatar String
  firstName String
  lastName String
  role UserRole [not null, default: 'STUDENT']
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  examSessions exam_sessions [not null]
  results results [not null]

  pronunciationProgress pronunciation_progress [not null]
  vocabularyProgress vocabulary_progress [not null]
  grammarProgress grammar_progress [not null]
  decks decks [not null]
  sharedDecks shared_decks [not null]
  questionNotes question_notes [not null]
  shadowingVideos shadowing_videos [not null]
  shadowingFolders shadowing_folders [not null]
  shadowingProgress shadowing_progress [not null]
  dictationVideos dictation_videos [not null]
  dictationFolders dictation_folders [not null]
  dictationProgress dictation_progress [not null]
  ieltsBasicProgress ielts_basic_progress [not null]
  ieltsWritingAnswers ielts_writing_user_answers [not null]
  practiceSessions ielts_practice_sessions [not null]
  practiceReadingSessions ielts_practice_reading_sessions [not null]
  advancedWritingSessions ielts_advanced_writing_sessions [not null]
  advancedSpeakingSessions ielts_advanced_speaking_sessions [not null]
  userAchievements user_achievements [not null]
  xpLogs xp_logs [not null]
  ieltsProfile ielts_profiles
  teacherLinks student_teacher_links [not null]
  studentLinks student_teacher_links [not null]
  notifications notifications [not null]
  posts posts [not null]
  comments comments [not null]
  postLikes post_likes [not null]
  bookmarks post_bookmarks [not null]
  subscription subscriptions
}

// ====== INTENSIVE EXAM ======

Table exams {
  id String [pk]
  title String [not null]
  description String
  imageUrl String
  duration Int [not null]
  type IeltsIntensiveExamType [not null]
  difficulty Difficulty [not null]
  isPublished Boolean [not null, default: false]
  questions Json [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  sessions exam_sessions [not null]
}

Table exam_sessions {
  id String [pk]
  userId String [not null]
  examId String [not null]
  status IeltsIntensiveSessionStatus [not null, default: 'IN_PROGRESS']
  answers Json [not null]
  timeTaken Int
  practicePart Int
  startedAt DateTime [default: `now()`, not null]
  submittedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  ieltsIntensiveExam exams [not null]
  ieltsIntensiveResult results
}

Table results {
  id String [pk]
  userId String [not null]
  sessionId String [unique, not null]
  totalScore Float [not null]
  readingScore Int
  listeningScore Int
  speakingScore Float
  writingScore Float
  feedback Json
  gradedAt DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  ieltsIntensiveSession exam_sessions [not null]
}

// ====== FOUNDATION: VOCABULARY ======

Table vocabulary_books {
  id String [pk]
  name String [not null]
  imageUrl String [not null]
  wordCount Int [not null]
  order Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  units vocabulary_units [not null]
}

Table vocabulary_units {
  id String [pk]
  bookId String [not null]
  title String [not null]
  order Int [not null]
  storyTitle String
  storyContent String
  storyImageUrl String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  book vocabulary_books [not null]
  words vocabulary_words [not null]
  questions vocabulary_questions [not null]
  progress vocabulary_progress [not null]
}

Table vocabulary_words {
  id String [pk]
  unitId String [not null]
  word String [not null]
  meaning String [not null]
  ipa String
  partOfSpeech String
  example String
  imageUrl String
  audioUrl String
  order Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  unit vocabulary_units [not null]
}

Table vocabulary_questions {
  id String [pk]
  unitId String [not null]
  question String [not null]
  type String [not null]
  options Json
  answer String [not null]
  order Int [not null, default: 0]
  unit vocabulary_units [not null]
}

Table vocabulary_progress {
  id String [pk]
  userId String [not null]
  unitId String [not null]
  wordsLearned Int [not null, default: 0]
  totalWords Int [not null, default: 20]
  questionScore Int
  isCompleted Boolean [not null, default: false]
  completedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  unit vocabulary_units [not null]

  indexes {
    (userId, unitId) [unique]
  }
}

// ====== FOUNDATION: GRAMMAR ======

Table grammar_books {
  id String [pk]
  slug String [unique, not null]
  name String [not null]
  author String [not null]
  level String [not null]
  imageUrl String [not null]
  color String [not null]
  unitCount Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  units grammar_units [not null]
}

Table grammar_units {
  id String [pk]
  bookId String [not null]
  title String [not null]
  order Int [not null]
  theoryContent String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  book grammar_books [not null]
  exercises grammar_exercises [not null]
  progress grammar_progress [not null]
}

Table grammar_exercises {
  id String [pk]
  unitId String [not null]
  section String [not null]
  question String [not null]
  type String [not null]
  options Json
  answer String [not null]
  order Int [not null, default: 0]
  unit grammar_units [not null]
}

Table grammar_progress {
  id String [pk]
  userId String [not null]
  unitId String [not null]
  theoryCompleted Boolean [not null, default: false]
  exerciseScore Int
  exerciseTotal Int
  completedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  unit grammar_units [not null]

  indexes {
    (userId, unitId) [unique]
  }
}

// ====== FOUNDATION: PRONUNCIATION ======

Table pronunciation_sounds {
  id String [pk]
  symbol String [unique, not null]
  type String [not null]
  word String [not null]
  name String
  description String
  tip String
  imageUrl String
  audioUrl String
  videoUrl String
  voiced Boolean
  order Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  exampleWords sound_example_words [not null]
  progress pronunciation_progress [not null]
}

Table sound_example_words {
  id String [pk]
  soundId String [not null]
  word String [not null]
  ipa String
  audioUrl String
  order Int [not null, default: 0]
  sound pronunciation_sounds [not null]
}

Table pronunciation_progress {
  id String [pk]
  userId String [not null]
  soundId String [not null]
  status PronunciationMastery [not null, default: 'NEW']
  practiceCount Int [not null, default: 0]
  bestScore Int
  lastPracticedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  sound pronunciation_sounds [not null]

  indexes {
    (userId, soundId) [unique]
  }
}

// ====== IELTS BASIC SKILLS ======

Table ielts_skills {
  id String [pk]
  name String [unique, not null]
  order Int [not null]
  lessons ielts_lessons [not null]
  listeningExercises ielts_listening_exercises [not null]
  readingExercises ielts_reading_exercises [not null]
  writingExercises ielts_writing_exercises [not null]
  speakingExercises ielts_speaking_exercises [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ielts_lessons {
  id String [pk]
  skillId String [not null]
  chapter String
  title String [not null]
  content Json [not null]
  quiz Json
  order Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  skill ielts_skills [not null]
  listeningExercises ielts_listening_exercises [not null]
  readingExercises ielts_reading_exercises [not null]
  writingExercises ielts_writing_exercises [not null]
  speakingExercises ielts_speaking_exercises [not null]
  progress ielts_basic_progress [not null]
}

Table ielts_listening_exercises {
  id String [pk]
  skillId String [not null]
  lessonId String
  topic String [not null]
  instructions String
  audioUrl String [not null]
  transcript Json [not null]
  content Json [not null]
  order Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  skill ielts_skills [not null]
  lesson ielts_lessons
  progress ielts_basic_progress [not null]
}

Table ielts_reading_exercises {
  id String [pk]
  skillId String [not null]
  lessonId String
  topic String [not null]
  instructions String
  passage String [not null]
  passageWithLocations Json
  content Json [not null]
  order Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  skill ielts_skills [not null]
  lesson ielts_lessons
  progress ielts_basic_progress [not null]
}

Table ielts_writing_exercises {
  id String [pk]
  skillId String [not null]
  lessonId String
  topic String [not null]
  instructions String
  prompt String [not null]
  diagramUrl String
  modelAnswer Json [not null]
  order Int [not null]
  taskType Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  skill ielts_skills [not null]
  lesson ielts_lessons
  progress ielts_basic_progress [not null]
  userAnswers ielts_writing_user_answers [not null]
}

Table ielts_writing_user_answers {
  id String [pk]
  userId String [not null]
  writingExerciseId String [not null]
  answers Json [not null, default: '{}']
  score Int
  totalBlanks Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  writingExercise ielts_writing_exercises [not null]

  indexes {
    (userId, writingExerciseId) [unique]
  }
}

Table ielts_speaking_exercises {
  id String [pk]
  skillId String [not null]
  lessonId String
  topic String [not null]
  partType Int [not null]
  questionType String [not null, default: 'cloze']
  instructions String
  prompt String [not null]
  content Json
  modelAnswer Json
  order Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  skill ielts_skills [not null]
  lesson ielts_lessons
  progress ielts_basic_progress [not null]
}

Table ielts_basic_progress {
  id String [pk]
  userId String [not null]
  lessonId String
  listeningExerciseId String
  readingExerciseId String
  writingExerciseId String
  speakingExerciseId String
  isCompleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  lesson ielts_lessons
  listeningExercise ielts_listening_exercises
  readingExercise ielts_reading_exercises
  writingExercise ielts_writing_exercises
  speakingExercise ielts_speaking_exercises

  indexes {
    (userId, lessonId, listeningExerciseId, readingExerciseId, writingExerciseId, speakingExerciseId) [unique]
  }
}

// ====== IELTS PRACTICE ======

Table ielts_practice_listening_parts {
  id String [pk]
  title String [not null]
  partNumber Int [not null]
  audioUrl String [not null]
  transcript Json [not null]
  content Json [not null]
  questionTypes String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  sessions ielts_practice_sessions [not null]
}

Table ielts_practice_sessions {
  id String [pk]
  userId String [not null]
  partId String [not null]
  answers Json [not null]
  scoreData Json [not null]
  totalScore Int [not null]
  totalQuestions Int [not null]
  createdAt DateTime [default: `now()`, not null]
  part ielts_practice_listening_parts [not null]
  user users [not null]
}

Table ielts_practice_reading_parts {
  id String [pk]
  title String [not null]
  partNumber Int [not null]
  passage String [not null]
  passageWithLocations Json
  content Json [not null]
  questionTypes String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  sessions ielts_practice_reading_sessions [not null]
}

Table ielts_practice_reading_sessions {
  id String [pk]
  userId String [not null]
  partId String [not null]
  answers Json [not null]
  scoreData Json [not null]
  totalScore Int [not null]
  totalQuestions Int [not null]
  createdAt DateTime [default: `now()`, not null]
  part ielts_practice_reading_parts [not null]
  user users [not null]
}

// ====== IELTS ADVANCED ======

Table ielts_advanced_writing_prompts {
  id String [pk]
  taskType String [not null]
  subType String [not null]
  source String [not null, default: 'engnovate']
  category String [not null, default: 'cambridge-academic']
  bookNumber Int
  testNumber Int
  title String [not null]
  prompt String [not null]
  imageUrl String
  minimumWords Int [not null, default: 150]
  suggestedTime Int [not null, default: 20]
  difficulty String [not null, default: 'medium']
  engnovateSlug String [unique]
  isPublished Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  sessions ielts_advanced_writing_sessions [not null]
}

Table ielts_advanced_writing_sessions {
  id String [pk]
  userId String [not null]
  promptId String [not null]
  essay String
  draftEssay String
  timeTaken Int
  status String [not null, default: 'IN_PROGRESS']
  feedback Json
  bandScore Float
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  prompt ielts_advanced_writing_prompts [not null]
}

Table ielts_advanced_speaking_parts {
  id String [pk]
  partNumber Int [not null]
  partType String [not null]
  topic String [not null]
  source String [not null, default: 'engnovate']
  category String [not null, default: 'cambridge-academic']
  bookNumber Int
  testNumber Int
  title String [not null]
  questions Json [not null]
  engnovateSlug String
  isPublished Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  sessions ielts_advanced_speaking_sessions [not null]

  indexes {
    (engnovateSlug, partNumber) [unique]
  }
}

Table ielts_advanced_speaking_sessions {
  id String [pk]
  userId String [not null]
  partId String [not null]
  audioUrls Json
  transcription Json
  timeTaken Int
  status String [not null, default: 'IN_PROGRESS']
  feedback Json
  bandScore Float
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  part ielts_advanced_speaking_parts [not null]
}

// ====== IELTS PROFILE ======

Table ielts_profiles {
  id String [pk]
  userId String [unique, not null]
  targetBand Float
  dailyCommitmentMins Int [default: 30]
  examDate DateTime
  placementScore Int
  placementListening Int
  placementReading Int
  placementWriting Int
  onboardingCompleted Boolean [not null, default: false]
  currentStreak Int [not null, default: 0]
  longestStreak Int [not null, default: 0]
  lastActiveDate DateTime
  totalXp Int [not null, default: 0]
  level Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
}

// ====== ENUMS ======

Enum UserRole {
  STUDENT
  ADMIN
  INSTRUCTOR
}

Enum IeltsIntensiveExamType {
  FULL_TEST
  READING
  LISTENING
  SPEAKING
  WRITING
  PRACTICE
}

Enum Difficulty {
  BEGINNER
  INTERMEDIATE
  ADVANCED
}

Enum IeltsIntensiveSessionStatus {
  IN_PROGRESS
  SUBMITTED
  GRADING
  GRADED
  COMPLETED
  ABANDONED
  GRADING_FAILED
}

Enum PronunciationMastery {
  NEW
  PRACTICING
  MASTERED
}

// ====== RELATIONSHIPS ======

Ref: exam_sessions.userId > users.id [delete: Cascade]

Ref: exam_sessions.examId > exams.id [delete: Cascade]

Ref: results.userId > users.id [delete: Cascade]

Ref: results.sessionId - exam_sessions.id [delete: Cascade]

Ref: vocabulary_units.bookId > vocabulary_books.id [delete: Cascade]

Ref: vocabulary_words.unitId > vocabulary_units.id [delete: Cascade]

Ref: vocabulary_questions.unitId > vocabulary_units.id [delete: Cascade]

Ref: vocabulary_progress.userId > users.id [delete: Cascade]

Ref: vocabulary_progress.unitId > vocabulary_units.id [delete: Cascade]

Ref: grammar_units.bookId > grammar_books.id [delete: Cascade]

Ref: grammar_exercises.unitId > grammar_units.id [delete: Cascade]

Ref: grammar_progress.userId > users.id [delete: Cascade]

Ref: grammar_progress.unitId > grammar_units.id [delete: Cascade]

Ref: sound_example_words.soundId > pronunciation_sounds.id [delete: Cascade]

Ref: pronunciation_progress.userId > users.id [delete: Cascade]

Ref: pronunciation_progress.soundId > pronunciation_sounds.id [delete: Cascade]

Ref: ielts_lessons.skillId > ielts_skills.id [delete: Cascade]

Ref: ielts_listening_exercises.skillId > ielts_skills.id [delete: Cascade]

Ref: ielts_listening_exercises.lessonId > ielts_lessons.id [delete: Cascade]

Ref: ielts_reading_exercises.skillId > ielts_skills.id [delete: Cascade]

Ref: ielts_reading_exercises.lessonId > ielts_lessons.id [delete: Cascade]

Ref: ielts_basic_progress.userId > users.id [delete: Cascade]

Ref: ielts_basic_progress.lessonId > ielts_lessons.id [delete: Cascade]

Ref: ielts_basic_progress.listeningExerciseId > ielts_listening_exercises.id [delete: Cascade]

Ref: ielts_basic_progress.readingExerciseId > ielts_reading_exercises.id [delete: Cascade]

Ref: ielts_basic_progress.writingExerciseId > ielts_writing_exercises.id [delete: Cascade]

Ref: ielts_basic_progress.speakingExerciseId > ielts_speaking_exercises.id [delete: Cascade]

Ref: ielts_writing_exercises.skillId > ielts_skills.id [delete: Cascade]

Ref: ielts_writing_exercises.lessonId > ielts_lessons.id [delete: Cascade]

Ref: ielts_writing_user_answers.userId > users.id [delete: Cascade]

Ref: ielts_writing_user_answers.writingExerciseId > ielts_writing_exercises.id [delete: Cascade]

Ref: ielts_speaking_exercises.skillId > ielts_skills.id [delete: Cascade]

Ref: ielts_speaking_exercises.lessonId > ielts_lessons.id [delete: Cascade]

Ref: ielts_practice_sessions.partId > ielts_practice_listening_parts.id [delete: Cascade]

Ref: ielts_practice_sessions.userId > users.id [delete: Cascade]

Ref: ielts_practice_reading_sessions.partId > ielts_practice_reading_parts.id [delete: Cascade]

Ref: ielts_practice_reading_sessions.userId > users.id [delete: Cascade]

Ref: ielts_advanced_writing_sessions.userId > users.id [delete: Cascade]

Ref: ielts_advanced_writing_sessions.promptId > ielts_advanced_writing_prompts.id [delete: Cascade]

Ref: ielts_advanced_speaking_sessions.userId > users.id [delete: Cascade]

Ref: ielts_advanced_speaking_sessions.partId > ielts_advanced_speaking_parts.id [delete: Cascade]

Ref: ielts_profiles.userId - users.id [delete: Cascade]
